--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "prop-types": "^15.5.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.5",
+    "redux": "^4.1.2",
+    "redux-promise-middleware": "^6.1.2",
     "serve-favicon": "^2.0.1",
     "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
